# otavia

./: .claudeignore  .gitignore  404.html  CLAUDE.md  CNAME  LICENSE  NOTICE.txt  README.MD  README.zh_cn.md  README.zn_ch.md  blog.html  build.mill  build.sbt  build.sc  home.html  index.html  sitemap.xml
LICENSES/: LICENSE.jsoniter-scala.txt
adbc/: README.md
api/: index.html
blog/: archive.html  atom.xml  hello-world-blog.html  rss.xml  tags.html
buffer/: CLAUDE.md
cc/: otavia.html
codec/: CLAUDE.md
codec-dns/: CLAUDE.md
codec-haproxy/: CLAUDE.md
codec-http/: CLAUDE.md  README.md
codec-kafka/: CLAUDE.md  README.md
codec-memcache/: CLAUDE.md
codec-mqtt/: CLAUDE.md
codec-redis/: CLAUDE.md  README.md
codec-smtp/: CLAUDE.md
codec-socks/: CLAUDE.md
common/: CLAUDE.md
core/: CLAUDE.md  README.md
docs/: core_concept.html  home.html  index.html  intro.html  module.html  name_from.html  quick_start.html  sidebar.yml
examples/: README.md
handler/: CLAUDE.md  README.md
io/: otavia.html
log4a/: CLAUDE.md
mio/: Cargo.toml
mio/src/: lib.rs
mio/src/io/otavia/core/channel/mio/: AbstractMioChannel.scala
mio/src/io/otavia/core/reactor/mio/: MioHandler.scala
mio/src/main/java/io/otavia/core/channel/mio/: Native.java
mio/src/main/scala/io/otavia/core/channel/mio/: AbstractMioChannel.scala  MioSocket.scala
mio/src/main/scala/io/otavia/core/reactor/mio/: MioHandler.scala
native-transport/: README.md
project/: plugins.sbt
scripts/: searchData.js
serde/: CLAUDE.md
serde-json/: CLAUDE.md
serde-proto/: CLAUDE.md
(+3835 files in other folders)
